# rails-lens

./: .gitignore  CONTRIBUTING.md  README.md  README_ja.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADDITIONAL_FEATURES.md  API_MIGRATION_FEATURES.md  DESIGN.md  PHASE_ROADMAP.md  REQUIREMENTS.md  SCREEN_MAP_FEATURE.md  SECURITY_PERFORMANCE_AUDIT.md  SQL_DIAGNOSTICS_FEATURE.md  WEB_DASHBOARD_DESIGN.md
ruby/: circular_dependencies.rb  data_flow.rb  dead_code_check.rb  dump_routes.rb  dump_schema.rb  dump_view_mapping.rb  gem_introspect.rb  impact_analysis.rb  introspect_model.rb  list_models.rb  method_resolution.rb  migration_context.rb  trace_callbacks.rb
ruby/helpers/: serializer.rb
src/rails_lens/: config.py  errors.py  models.py  server.py
src/rails_lens/analyzers/: api_detector.py  concern_extractor.py  dead_code_detector.py  grep_search.py  impact_search.py  inventory_formatter.py  reverse_index_builder.py  screen_name_resolver.py  template_parser.py  test_mapper.py  (+1 more)
tests/: conftest.py  test_analyze_concern.py  test_bridge_runner.py  test_cache_manager.py  test_circular_dependencies.py  test_config.py  test_data_flow.py  test_dead_code.py  test_dependency_graph.py  test_extract_concern.py  test_find_references.py  test_full_inventory.py  test_gem_introspect.py  test_get_routes.py  test_get_schema.py  test_grep_search.py  test_impact_analysis.py  test_introspect_model.py  test_list_models.py  test_method_resolution.py  test_migration_context.py  test_models.py  test_refresh_cache.py  test_screen_map.py  test_source_to_screens.py  test_template_parser.py  test_test_mapping.py  test_trace_callback_chain.py  test_view_resolver.py
tests/test_web/: test_app.py  test_er_builder.py  test_flow.py  test_gems.py  test_health.py  test_impact.py  test_refactor.py
(+64 files in other folders)
